--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                 </div>
 
                 <div class="sections sec10">
-                    <a  href="https://www.saifive.com/"><img class="LGO" src="58638ACB-7181-448C-B8E1-9386FEDAB8BE - Gautham Sai.jpeg"></a>
+                    <a  href="https://www.saifive.com/"><img class="LGO" src="logo-white-backgound - Copy - Clever Fox Publishing.jpg"></a>
                     <h2 class="secHeading" style="padding-bottom: 20px;">Job Requirement-10</h2>
                     <h3>Clever Fox Publishing </h3>
                     <p>
