--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#" class="menu-btn">HOME</a></li>
                 <li><a href="#" class="menu-btn">EVENT</a></li>
                 <li><a href="#" class="menu-btn">MENTOR</a></li>
-                <li><a href="#" class="menu-btn">DICTIONARY</a></li>
+                <li><a href="#" class="menu-btn">DIRECTORY</a></li>
                 <li><a href="#" class="menu-btn">SERVICES</a></li>
                 <li><a href="#" class="menu-btn">VIDEOS</a></li>
             </ul>
